src/main.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 16px !important;
}

body.rtl-direction { /* for arabic language */
    direction: rtl;
}
body.rtl-direction .ltr-direction { /* exception dialogs */
    direction: ltr;
}

.mainContainer {
    width: 100%;
}

body.affiliates {
  overflow-x: hidden;
}

body > .footer {
    transition: height .2s linear;
    top:0;
    position: absolute;
    width: 100%;
    height: 96px;
    text-align: center;
    color :  #88a;
    padding-top : 2px;
    padding-bottom : 2px;
}
body > .footer .addiction-warning {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    display: inline-block;
    background: #2a3052;
}
body > .footer .addiction-warning span {
  color: white;
  text-align: left;
  display: inline-block;
  /*max-width: 900px;*/
    text-align: center;
}
body > .footer .addiction-warning a,
body > .footer .addiction-warning a:visited,
body > .footer .addiction-warning a:hover {
  color: white;
  text-decoration: underline;
}


.ui-dialog .ui-dialog-titlebar-close { /* override jquery-ui.icons.css library */
  width: 14px !important;
  height: 14px !important;
}

.ui-dialog {
    padding: 0!important;
}

.ui-dialog-content {
    background-color: #f2f2f2!important;
}

.ui-corner-all {
    border-bottom-right-radius: 0!important;
    border-bottom-left-radius: 0!important;
    border-top-right-radius: 0!important;
    border-top-left-radius: 0!important;
}

.ui-priority-secondary {
    opacity: 1!important;
}

.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default {
    border: 0px solid #273051;
    background: #273051;
    font-weight: normal;
    color: #FFFFFF;
}

.ui-widget-header {
    border: 1px solid #273051;
    background: #273051!important;
    color: #FFFFFF;
    font-family: 'Roboto'!important;
    font-weight: normal!important;
}

div.ui-tooltip { /* override default jquery ui max tooltip width */
    max-width: 400px;
    line-height: 1.2em;
}

.ui-widget {
    outline: 0;
}

.ui-dialog .ui-dialog-content {
    padding: .5em .5em;
    padding-bottom: 0;
}
.ui-dialog-titlebar-buttonpane {
  height: 14px !important;
  margin-top: -7px !important;
  margin-right: 10px!important;
}

button.ui-button-text-only {
    margin-top: 15px;
    /*height: 46px;*/
    margin: 0;
    padding: 0;
}

button.ui-button-text-only .ui-menu {
    border-color: #3F476E;
}

.ui-menu {
    z-Index: 1003;
}
/*Overriding this class inheritted from dataTables jquery plugin*/

.dataTables_scrollHeadInner,
/*.sorting_asc,*/
.dataTable,
.dataTables_filter {
    width: 100% !important;
}

.dataTables_filter label {
    position: relative;
    float: left;
}

/* SK SPINNER STYLES
 *  Usage:
 *
 *    <div class="sk-spinner sk-spinner-wave">
 *      <div class="sk-rect1"></div>
 *      <div class="sk-rect2"></div>
 *      <div class="sk-rect3"></div>
 *      <div class="sk-rect4"></div>
 *      <div class="sk-rect5"></div>
 *    </div>
 *
 */

.sk-spinner-container {
    width: 60px;
    height: 60px;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 60px;
    right: 0;
    margin: auto auto;
    -webkit-user-select: none;
    display: block;
    margin: auto auto;
}

.sk-spinner-wave.sk-spinner {
    margin: 0 auto;
    width: 60px;
    height: 30px;
    text-align: center;
    font-size: 10px;
}

.sk-spinner-wave div {
    background-color: #333;
    height: 100%;
    width: 6px;
    display: inline-block;
    margin-right: 3px;
    -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
    animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
}

.sk-spinner-wave .sk-rect2 {
    -webkit-animation-delay: -1.1s;
    animation-delay: -1.1s;
}

.sk-spinner-wave .sk-rect3 {
    -webkit-animation-delay: -1s;
    animation-delay: -1s;
}

.sk-spinner-wave .sk-rect4 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
}

.sk-spinner-wave .sk-rect5 {
    -webkit-animation-delay: -0.8s;
    animation-delay: -0.8s;
}

@-webkit-keyframes sk-waveStretchDelay {
    0%,
    40%,
    100% {
        -webkit-transform: scaleY(0.4);
        transform: scaleY(0.4);
    }
    20% {
        -webkit-transform: scaleY(1);
        transform: scaleY(1);
    }
}

@keyframes sk-waveStretchDelay {
    0%,
    40%,
    100% {
        -webkit-transform: scaleY(0.4);
        transform: scaleY(0.4);
    }
    20% {
        -webkit-transform: scaleY(1);
        transform: scaleY(1);
    }
}

.red { color: #d71818; }
.green { color: #02920e; }
.orange { color: #EA9800; }
.bold { font-weight: bold }

/* Remove IE10+ "clear field" X button on certain inputs
   This does not trigger a JQ changed event, and no other browser has such X button */
input::-ms-clear {
    display: none;
}

/* Remove dotted-underline around buttons in FF */
button::-moz-focus-inner { border: 0; }

/* default style for inputs */
input:not([type='checkbox']) {
  border: none;
  border: 1px solid gray;
  outline: 0;
  box-sizing: border-box;
  box-shadow: inset 0 2px 2px rgba(0,0,100,.10);
  transition: box-shadow 0.3s;
  width: 100%;
  height: 26px;
  line-height: 26px;
}

/*Overriding css for color-picker*/
input[type="radio"].ui-colorpicker-mode {
  box-shadow: none;
  width: auto;
  height: auto;
  line-height: normal;
}
input[type="number"].ui-colorpicker-number {
  box-shadow: none;
  width: 60px;
  height: auto;
  line-height: normal;
}
input[type="text"].ui-colorpicker-hex-input {
  box-shadow: none;
  width: auto;
  height: auto;
  line-height: normal;
}
input[type="text"].ui-colorpicker-hex-alpha {
  box-shadow: none;
  width: auto;
  height: auto;
  line-height: normal;
}
/*Ends here*/

input:focus {
  box-shadow: inset 0 2px 2px rgba(0,0,120,.25);
}

.growl.growl-notice {
    background: #fef1cf !important;
    color: black !important;
}
.growl > .growl-close {
  padding-left: 5px;
}
#growls { top: 110px !important; }

.growl-error a {
  color: white !important;
  text-decoration: underline;
}

button {
    outline: 0 !important;
}
button.button-disabled,
button[disabled] {
  opacity: 0.5;
}

.table {
    display: table;
}
.row {
    display: table-row;
}
.cell {
    display: table-cell;
}

.horizontal-line {
    width: 100%;
    height: 1px;
    background-color: black;
}

/* For confirmation dialogs */
.dialog-confirm.ui-dialog  {
    background: #f2f2f2;
    border-bottom: 5px solid #EA9800;
}

.dialog-confirm.ui-dialog .ui-widget-content {
    background: #f2f2f2;
    border: none;
    padding: 0.5em 1em 0em 1em;
    text-align: center
}
/* Hide Dialog title-bar*/
.dialog-confirm.ui-dialog .ui-dialog-titlebar {
    display: none;
}

/* override timepciker styles */
.ui-timepicker-table {
  background: #f2f2f2;
}
.ui-timepicker-title {
  margin: 2px;
  border-radius: 3px!important;
}
.ui-timepicker-table table {
  margin-right: 1px!important;
}
.ui-timepicker td a, .ui-timepicker td span {
  text-align: center!important;
  border-radius: 3px!important;
  padding: 3px 5px!important;
  font-size: 12px;
}
.ui-timepicker-table td a.ui-state-active {
  background: #3F476E;
  font-weight: bold;
}
.ui-timepicker-close {
  background: #2E8836!important;
  border-radius: 3px!important;
  padding: 10px 15px!important;
  font-size: 1em!important;
}
/* override datepicker syles */
#ui-datepicker-div.ui-datepicker {
  background: rgb(242, 242, 242);
  padding: 0 0 0 0;
}
.ui-datepicker-month, .ui-datepicker-year {
  margin-right:5px!important;
  border: 1px solid #273051;
}
#ui-datepicker-div.ui-datepicker .ui-datepicker-calendar {
  margin-left: 3.2px;
  width: 98%;
}
#ui-datepicker-div.ui-datepicker .ui-datepicker-calendar a {
  color: #FFF;
  text-align: center;
  line-height: 100%;
  border-radius: 3px;
  padding: 5px 10px;
  font-size: 12px;
}
#ui-datepicker-div.ui-datepicker .ui-datepicker-calendar a.ui-state-active {
  background: #3F476E;
  font-weight: bold;
}
#ui-datepicker-div.ui-datepicker .ui-datepicker-calendar tbody span {
  border-radius: 3px;
  text-align: center;
  font-size: 12px;
}
.ui-datepicker-buttonpane {
  text-align: center;
  background: #f2f2f2;
}
.ui-datepicker-current, .ui-datepicker-close {
  color: #FFF;
  line-height: 100%;
  background: #2E8836!important;
  border-radius: 3px!important;
  padding: 10px 15px!important;
  font-size: 1em!important;
  float: none!important;
}
.ui-datepicker-current:hover, .ui-datepicker-close:hover {
  background: #14602B!important;
}
.ui-datepicker-prev, .ui-datepicker-next {
  color: white!important;
}
.ui-datepicker-prev:hover, .ui-datepicker-next:hover{
  background: #394171!important;
  border: 0!important;
  border-radius: 3px!important;
  height: 30px;
}

/* override table styles*/
table.dataTable thead th, table.dataTable thead td, table.dataTable.no-footer {
  border-bottom: none!important;
}

/* make dropdowns consistent with binary-style */
select + .ui-selectmenu-button { border-radius: 3px !important;}

#doorbell-button  {
    right: -37px;
    transform: rotate(-90deg);
    -webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    font-size: inherit;
    background-color: #2E8836;
    bottom: 100px;
}

